--- a/src/react-frontend/package.json
+++ b/src/react-frontend/package.json
@@ -5,13 +5,16 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.19",
+    "@mui/material": "^5.14.20",
+    "@mui/x-date-pickers": "^6.18.4",
+    "@mui/x-date-pickers-pro": "^6.18.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@wojtekmaj/react-daterange-picker": "^5.4.4",
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
+    "dayjs": "^1.11.10",
     "lib-utils-ts": "^2.0.4-stable",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
